<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>
    <TextView
            android:textStyle="bold"
            android:text="@string/label_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/titleEditText"/>
    <TextView
            android:textStyle="bold"
            android:text="@string/label_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/textView11"/>
    <TextView
            android:textStyle="bold"
            android:text="@string/label_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/textView11"/>
    <TextView
            android:textStyle="bold"
            android:text="@string/label_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/yearEditText"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="8dp"/>
    <TextView
            android:textStyle="bold"
            android:text="@string/label_url"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:id="@+id/textView9"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/genreEditText"/>
    <TextView
            android:textStyle="bold"
            android:text="@string/label_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/urlEditText"/>
    <EditText
            android:textSize="@dimen/material_typography_dense_caption_text_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/titleEditText"
            android:background="@null"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            android:hint="@string/label_hint_title"/>
    <EditText
            android:textSize="@dimen/material_typography_dense_caption_text_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:background="@null"
            android:id="@+id/genreEditText"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            android:hint="@string/label_hint_genre"/>
    <EditText
            android:background="@null"
            android:textSize="@dimen/material_typography_dense_caption_text_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/ratingEditText"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/label_hint_rating"/>
    <EditText
            android:background="@null"
            android:textSize="@dimen/material_typography_dense_caption_text_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/yearEditText"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/label_hint_year"/>
    <EditText
            android:background="@null"
            android:textSize="@dimen/material_typography_dense_caption_text_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:ems="10"
            android:id="@+id/urlEditText"
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/label_hint_url"/>
    <EditText
            android:gravity="top"
            android:background="@null"
            android:textSize="@dimen/material_typography_dense_caption_text_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="5"
            android:ems="10"
            android:id="@+id/summaryEditText"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/lable_hint_summary"/>

    <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold"
            android:text="@string/label_new_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>