<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_movie_detail"
        tools:context=".feature.moviedetail.ui.MovieDetailActivity">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

    <ImageView
            android:contentDescription="@string/label_movie_thumbnail_description"
            android:layout_height="0dp"
            android:background="@color/colorPrimary"
            android:id="@+id/thumbnailImageView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            android:layout_width="0dp"
            app:layout_constraintDimensionRatio="w,1.5:1"/>

    <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:text="Title"
            android:layout_width="0dp"
            android:maxLines="2"
            android:layout_height="wrap_content"
            android:id="@+id/titleTextView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/label_genre"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            android:layout_marginStart="8dp"/>

    <TextView
            android:text="@string/label_year"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:id="@+id/textView3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            android:layout_marginStart="8dp"/>

    <TextView
            android:text="@string/label_rating"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:id="@+id/textView4"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            android:layout_marginStart="8dp"/>
    <TextView
            tools:text="TextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/summaryTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"/>

    <TextView
            android:text="@string/label_summary"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:id="@+id/textView7"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/thumbnailImageView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>

    <TextView
            tools:text="Adventure"
            android:layout_width="0dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:layout_height="wrap_content"
            android:id="@+id/genreTextView"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"/>

    <TextView
            tools:text="1991"
            android:layout_width="0dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:layout_height="wrap_content"
            android:id="@+id/yearTextView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/genreTextView"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>

    <TextView
            tools:text="100"
            android:layout_width="0dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:layout_height="wrap_content"
            android:id="@+id/ratingTextView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/yearTextView"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>